clusters/home/rampart/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rampart
  namespace: rampart
  labels: { app: rampart }
spec:
  selector: { app: rampart }
  ports:
    - { name: http, port: 8080, targetPort: http }
